--- a/lab01/lab01.html
+++ b/lab01/lab01.html
@@ -7,15 +7,17 @@
     <link rel="stylesheet" href="lab01.css">
 </head>
 <body>
-    <div class="content">
+    <main class="content">
         <h1>Kira Desai</h1>
         <p class="ppp"> Something <span class="p">personal</span> about me is that I have a dog named Moose. Something <span class="p">professional</span> is that I will be working in banking post-graduation. Finally, something <span class="p">peculiar</span> is that I have double jointed thumbs. </p>
         <div class="images">
             <img src="moose.jpg" alt="brown lab dog" class="topleft">
             <img src="wells.JPG" alt="standing in front of wells fargo logo" class="topright">
-            <img src="moose2.JPG" alt="brown lab sleepig" class="bottomleft">
-            <img src="thumb.jpg" alt="thumb in double jointed positiom" class="bottomright">
         </div>
-    </div>
+        <div class="images">
+            <div> <img src="moose2.JPG" alt="brown lab sleepig" class="bottomleft"> </div>
+            <div> <img src="thumb.jpg" alt="thumb in double jointed positiom" class="bottomright"> </div>
+        </div>
+    </main>
 </body>
 </html>
