--- a/lab02/lab01_corrections.html
+++ b/lab02/lab01_corrections.html
@@ -13,10 +13,10 @@
         <p class="ppp"> Something <span class="p">personal</span> about me is that I have a dog named Moose. Something <span class="p">professional</span> is that I will be working in banking post-graduation. Finally, something <span class="p">peculiar</span> is that I have double jointed thumbs. </p>
         <div class="images">
             <div> <img src="../images/moose.jpg" alt="brown lab dog" class="topleft"> </div>
-            <div> <img src="../images/wells.JPG" alt="standing in front of wells fargo logo" class="topright"> </div>
+            <div> <img src="../images/wells.jpg" alt="standing in front of wells fargo logo" class="topright"> </div>
         </div>
         <div class="images">
-            <div> <img src="../images/moose2.JPG" alt="brown lab sleepig" class="bottomleft"> </div>
+            <div> <img src="../images/moose2.jpg" alt="brown lab sleepig" class="bottomleft"> </div>
             <div> <img src="../images/thumb.jpg" alt="thumb in double jointed positiom" class="bottomright"> </div>
         </div>
         
